--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/01475f921c.js" crossorigin="anonymous"></script>
     <!-- CSS-Link -->
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Football</title>
 </head>
 
 <body>
